# neural-forge

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: basic_chat.py  multi_provider.py
src/neural_forge/: __init__.py  cli.py  forge.py  hooks.py  models.py  routing.py
src/neural_forge/providers/: base.py  openai_provider.py
tests/: test_models.py  test_routing.py
