[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "neural-forge"
version = "0.1.0"
description = "Production-grade multi-model AI agent framework with intelligent routing"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "diangeloww" }]
keywords = ["ai", "llm", "multi-model", "agent", "routing", "openai", "anthropic", "google"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "httpx>=0.27",
    "pydantic>=2.0",
    "tiktoken>=0.7",
]

[project.optional-dependencies]
openai = ["openai>=1.30"]
anthropic = ["anthropic>=0.30"]
google = ["google-genai>=1.0"]
all = ["neural-forge[openai,anthropic,google]"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "A", "SIM"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
